changed gh pages link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akbarkhamid.github.io/hangman-react",
+  "homepage": "https://akbarkhamid.github.io/hangman-react/",
   "name": "hangman-react",
   "version": "0.1.0",
   "private": true,
